<resources>
    <string name="app_name">Servirural</string>

    <string name="title_activity_logo">SERVIRURAL</string>
    <string name="espacio">******************************************************</string>
    <string name="corte">Corte:</string>
    <string name="title_activity_login">Inicio de sesión</string>
    <string name="usurio">Nombre de usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="recordar">Recordar Contraseña</string>
    <string name="boton_inicio">INICIAR SESION</string>
    <string name="olvide">Olvide mi contraseña</string>
    <string name="title_activity_menu">Menu</string>
    <string name="entrega">LINEAS</string>
    <string name="recaudo">RECAUDOS</string>
    <string name="reposicion">SOAT </string>
    <string name="licencias">LICENCIAS </string>
    <string name="transacciones">TRANSACCIONES </string>
    <string name="tipo_transa">TIPO TRANSACCIÓN </string>

    <string name="devoluciones">DEVOLUCIONES</string>
    <string name="recarga">RECARGAS</string>
    <string name="title_activity_recaudos">recaudos</string>
    <string name="numero_recibo">Número de recibo</string>
    <string name="valor_pagar">Valor pagar</string>
    <string name="observacion">OBSERVACIONES:</string>
    <string name="direcion_ususario">Dirección cliente</string>
    <string name="saldo_total">Saldo total</string>
    <string name="total_linea">Lineas</string>
    <string name="total_soat">Soats</string>
    <string name="total_Lic">Soats</string>
    <string name="total_Rec">Recargas</string>
    <string name="linea">PRODUCTOS:</string>
    <string name="linea2">LINEA:</string>
    <string name="barrio">Barrio:</string>
    <string name="direccion">DIR:</string>
    <string name="saldo">SALDO:</string>
    <string name="ver_detalles">Ver detalles...</string>
    <string name="usuriom">NOMBRE DE USUARIO:</string>
    <string name="cliente">CLIENTE:</string>
    <string name="info_adicional">INFORMACIÓN ADICIONAL:</string>
    <string name="cancelar">CANCELAR</string>

    <string name="guardar">GUARDAR</string>
    <string name="imprimir">Imprimir recibo ?</string>
    <string name="hello_world">Hello world!</string>
    <string name="total_clientes">Clientes:</string>
    <string name="total_saldo">Saldo pendiente:</string>
    <string name="total_saldo_recaudado">Saldo recaudado:</string>
    <string name="action_settings">Configuraciones</string>
    <string name="action_cerrar_sesion">Cerrar sesión</string>
    <string name="action_exportar">Exportar Transacciones (Excel)</string>
    <string name="action_delete">Borrar Transacciones Almacenadas</string>
    <string name="title_activity_list_recaudos">Lista de clientes recaudos</string>
    <string name="title_activity_lineas">lineas</string>
    <string name="title_activity_activity_linea">activity_linea</string>
    <string name="ventas">Ventas</string>
    <string name="repsiciones">REPOCISION</string>
    <string name="lista_clientes">CLIENTES</string>
    <string name="title_activity_venta">venta</string>
    <string-array name="valores_spinner_list_recaudo">
        <item>Nombre</item>
        <item>Corte</item>
        <item>Dirección</item>
    </string-array>
    <string name="buscar">buscar</string>
    <string name="imprimir_reporte">Imprimir reporte final</string>
    <string name="title_activity_configuracion">Configuración</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Impresión en sitio</string>
    <string name="pref_description_social_recommendations">Si está activada, se hará la impresión de los tiquetes al finalizar cada proceso
    </string>
    <string name="precio">PRECIO:
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">Fijar impresora</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_buscar_imp">Buscar impresoras por medio de bluetooth y fijar la deseada</string>
    <string name="pref_mensajero">Mensajero en el sistema</string>
    <string name="pref_mensajero_summary">Ninguno</string>
    <string name="pref_bluetooth_preder_subtitle">Agrega un dispositivo predeterminado para realizar la impresión</string>
    <string name="txt_pair">Conectar</string>
    <string name="blue_no_soportado">Bluetooth no Soportado por este dispositivo!</string>
    <string name="blueDicovering">Bluetooth esta en busqueda de dispositivos, espera..</string>
    <string name="bluedevices_nofound">No Hay Dispositivos disponibles!</string>
    <string name="title_activity_recuado_soat_list">Lista de clientes</string>

</resources>
