<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.meysi.desarrollo.servirural_android.RecaudosActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView2" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="26dp"
        android:text="@string/barrio"
        android:id="@+id/textView4"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:typeface="serif"
        android:layout_alignTop="@+id/txtBarrioR"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/txtBarrioR"
        android:layout_toStartOf="@+id/txtBarrioR" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="26dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtClienteR"
        android:background="@drawable/cuadrado_b"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="44dp"
        android:layout_above="@+id/textView6"
        android:layout_toRightOf="@+id/textView6"
        android:layout_alignRight="@+id/lblVerDetalles"
        android:layout_alignEnd="@+id/lblVerDetalles"
        android:editable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:text="@string/direcion_ususario"
        android:id="@+id/textView6"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:text="@string/cliente"
        android:id="@+id/textView7"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:typeface="serif" />

    <EditText
        android:layout_width="160dp"
        android:layout_height="26dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtBarrioR"
        android:background="@drawable/cuadrado_b"
        android:layout_marginTop="80dp"
        android:layout_alignLeft="@+id/txtClienteR"
        android:layout_alignStart="@+id/txtClienteR"
        android:editable="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="26dp"
        android:text="@string/total_linea"
        android:autoLink="all"
        android:clickable="true"
        android:id="@+id/lblVerDetalles"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_below="@+id/txtBarrioR"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:typeface="serif" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:text="@string/valor_pagar"
        android:id="@+id/textView8"
        android:textColor="#ffffff"
        android:textStyle="bold|italic"
        android:gravity="center_vertical"
        android:layout_below="@+id/txtSaldoTotalR"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:typeface="serif" />

    <EditText
        android:layout_width="46dp"
        android:layout_height="26dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtNumLineasR"
        android:background="@drawable/cuadrado_b"
        android:layout_alignTop="@+id/lblVerDetalles"
        android:layout_alignLeft="@+id/txtBarrioR"
        android:layout_alignStart="@+id/txtBarrioR"
        android:editable="false"
        android:gravity="center" />
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_detalles"
        android:layout_alignBottom="@+id/lblVerDetalles"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"
        android:layout_marginBottom="4dp"
        android:textColor="@color/material_blue_grey_800"
        android:foregroundTint="@color/abc_primary_text_material_light"
        android:foreground="@color/accent_material_light"
        android:textStyle="bold|italic" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="26dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtSaldoTotalR"
        android:background="@drawable/cuadrado_b"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignLeft="@+id/txtNumLineasR"
        android:layout_alignStart="@+id/txtNumLineasR"
        android:layout_marginTop="4dp"
        android:editable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:text="@string/saldo_total"
        android:id="@+id/textView9"
        android:textColor="#000000"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:typeface="serif"
        android:layout_below="@+id/lblVerDetalles"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:text="@string/observacion"
        android:id="@+id/textView10"
        android:textColor="#000000"
        android:textStyle="bold"
        android:typeface="serif"
        android:layout_below="@+id/textView12"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:id="@+id/btnPagar"
        android:background="@drawable/cuadrado"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="113dp"
        android:layout_alignRight="@+id/txtObservacionesR"
        android:layout_alignEnd="@+id/txtObservacionesR"
        android:layout_toEndOf="@+id/horizontalScrollView2"
        android:layout_toRightOf="@+id/horizontalScrollView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txtObservacionesR"
        android:background="@drawable/cuadrado_b"
        android:lines="5"
        android:layout_below="@+id/textView10"
        android:layout_alignRight="@+id/txtValorPagarR"
        android:layout_alignEnd="@+id/txtValorPagarR"
        android:layout_toRightOf="@+id/horizontalScrollView2"
        android:layout_toEndOf="@+id/horizontalScrollView2"
        android:text="..." />

    <EditText
        android:layout_width="196dp"
        android:layout_height="26dp"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtDireccionR"
        android:background="@drawable/cuadrado_b"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/txtClienteR"
        android:layout_alignStart="@+id/txtClienteR"
        android:editable="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txtValorPagarR"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignLeft="@+id/txtSaldoTotalR"
        android:layout_alignStart="@+id/txtSaldoTotalR"
        android:lines="2"
        android:focusable="false"
        android:hint=" ...Detalles de pago "
        android:background="@drawable/cuadrado_b" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:text="@string/corte"
            android:id="@+id/textView12"
            android:textColor="#000000"
            android:textStyle="bold"
            android:typeface="serif"
            android:layout_below="@+id/textView8"
            android:layout_alignLeft="@+id/textView8"
            android:layout_alignStart="@+id/textView8" />

     </RelativeLayout>
    </ScrollView>

</RelativeLayout>
