<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.meysi.desarrollo.servirural_android.RecargasActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/horizontalScrollView2" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="26dp"
                android:text="@string/barrio"
                android:id="@+id/textView4"
                android:textColor="#000000"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:typeface="serif"
                android:layout_alignTop="@+id/txtBarrioRRec"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/txtBarrioRLic"
                android:layout_toStartOf="@+id/txtBarrioRRec" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="26dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtClienteRRec"
                android:background="@drawable/cuadrado_b"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="44dp"
                android:layout_above="@+id/textView6"
                android:layout_toRightOf="@+id/textView6"
                android:layout_alignRight="@+id/lblVerDetallesRec"
                android:layout_alignEnd="@+id/lblVerDetallesRec"
                android:editable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:text="@string/direcion_ususario"
                android:id="@+id/textView6"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_below="@+id/textView7"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:typeface="serif" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:text="@string/cliente"
                android:id="@+id/textView7"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_alignLeft="@+id/textView6"
                android:layout_alignStart="@+id/textView6"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:typeface="serif" />

            <EditText
                android:layout_width="160dp"
                android:layout_height="26dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtBarrioRRec"
                android:background="@drawable/cuadrado_b"
                android:layout_marginTop="80dp"
                android:layout_alignLeft="@+id/txtClienteRRec"
                android:layout_alignStart="@+id/txtClienteRRec"
                android:editable="false" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="26dp"
                android:text="@string/total_Rec"
                android:autoLink="all"
                android:clickable="true"
                android:id="@+id/lblVerDetallesRec"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_below="@+id/txtBarrioRRec"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:typeface="serif" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:text="@string/valor_pagar"
                android:id="@+id/textView8"
                android:textColor="#ffffff"
                android:textStyle="bold|italic"
                android:gravity="center_vertical"
                android:layout_below="@+id/txtSaldoTotalRRec"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:typeface="serif" />

            <EditText
                android:layout_width="46dp"
                android:layout_height="26dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtNumRec"
                android:background="@drawable/cuadrado_b"
                android:layout_alignTop="@+id/lblVerDetallesRec"
                android:layout_alignLeft="@+id/txtBarrioRRec"
                android:layout_alignStart="@+id/txtBarrioRRec"
                android:editable="false"
                android:gravity="center" />
            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ver_detalles"
                android:layout_alignBottom="@+id/lblVerDetallesRec"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:visibility="invisible"
                android:layout_marginBottom="4dp"
                android:textColor="@color/material_blue_grey_800"
                android:foregroundTint="@color/abc_primary_text_material_light"
                android:foreground="@color/accent_material_light"
                android:textStyle="bold|italic" />
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="26dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtSaldoTotalRRec"
                android:background="@drawable/cuadrado_b"
                android:layout_alignTop="@+id/textView9"
                android:layout_alignLeft="@+id/txtNumRec"
                android:layout_alignStart="@+id/txtNumRec"
                android:layout_marginTop="4dp"
                android:editable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:text="@string/saldo_total"
                android:id="@+id/textView9"
                android:textColor="#000000"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:typeface="serif"
                android:layout_below="@+id/lblVerDetallesRec"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:text="@string/observacion"
                android:id="@+id/textView10"
                android:textColor="#000000"
                android:textStyle="bold"
                android:typeface="serif"
                android:layout_below="@+id/textView8"
                android:layout_alignLeft="@+id/textView8"
                android:layout_alignStart="@+id/textView8" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:id="@+id/btnPagarRec"
                android:background="@drawable/cuadrado"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_below="@+id/textView10"
                android:layout_marginTop="113dp"
                android:layout_alignRight="@+id/txtObservacionesRRec"
                android:layout_alignEnd="@+id/txtObservacionesRRec"
                android:layout_toEndOf="@+id/horizontalScrollView2"
                android:layout_toRightOf="@+id/horizontalScrollView2" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/txtObservacionesRRec"
                android:background="@drawable/cuadrado_b"
                android:lines="5"
                android:layout_below="@+id/textView10"
                android:layout_alignRight="@+id/txtValorPagarRRec"
                android:layout_alignEnd="@+id/txtValorPagarRRec"
                android:layout_toRightOf="@+id/horizontalScrollView2"
                android:layout_toEndOf="@+id/horizontalScrollView2"
                android:text="..." />

            <EditText
                android:layout_width="196dp"
                android:layout_height="26dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/txtDireccionRRec"
                android:background="@drawable/cuadrado_b"
                android:layout_alignBottom="@+id/textView6"
                android:layout_alignLeft="@+id/txtClienteRRec"
                android:layout_alignStart="@+id/txtClienteRRec"
                android:editable="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/txtValorPagarRRec"
                android:layout_alignTop="@+id/textView8"
                android:layout_alignLeft="@+id/txtSaldoTotalRRec"
                android:layout_alignStart="@+id/txtSaldoTotalRRec"
                android:lines="2"
                android:focusable="false"
                android:hint=" ...Detalles de pago "
                android:background="@drawable/cuadrado_b" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
